--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,10 +3,28 @@
 		<div class="container">
 			<%= link_to "sample app", root_path, id: "logo" %> 
 			<nav>
-				<ul class="nav pull-right">					
-					<li><%= link_to "Sign in", '#' %></li>
+				<ul class="nav pull-right">
+					<li><%= link_to "Home", root_path %></li> 
 					<li><%= link_to "Help", help_path %></li> 
-				</ul> 
+					<% if signed_in? %>
+						<li><%= link_to "Users", '#' %></li> 
+						<li id="fat-menu" class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown"> 
+								Account <b class="caret"></b>
+							</a>
+								<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+									<li><%= link_to "Profile", current_user %></li> 
+									<li><%= link_to "Settings", '#' %></li>
+									<li class="divider"></li>
+									<li>
+										<%= link_to "Sign Out", signout_path, method: :delete %> 
+									</li>
+								</ul> 
+						</li>
+					<% else %>
+						<li><%= link_to "Sign In", signin_path %></li>
+					<% end %> 
+				</ul>
 			</nav>
 		</div>
 	</div>
